tests/integration/errors/catch.orng
// 118
fn main() -> Int {
    let x: (err: Char|)!Int = (.err <- 'd')
    x catch 118
}
